Updated predictiveForecasting : Added information about SARIMAX results

--- a/predictiveForecasting.ipynb
+++ b/predictiveForecasting.ipynb
@@ -525,11 +525,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- AIC (Akaike Information Criterion): A measure of the relative quality of a statistical model, with a lower AIC indicating a better-fitting model. It's used for model selection among a set of candidate models.\n",
+    "\n",
+    "- BIC (Bayesian Information Criterion): Similar to AIC, but it penalizes the number of parameters more heavily, favoring simpler models."
+   ]
   }
  ],
  "metadata": {
