Updated preprocessing_AEX_Market : Fetching data now includes max period and uses dates as index to the dataframe

--- a/preprocessing_AEX_Market.ipynb
+++ b/preprocessing_AEX_Market.ipynb
@@ -775,8 +775,8 @@
    "source": [
     "# List of AEX stocks\n",
     "aex_stocks = df[\"Ticker symbol\"].tolist()\n",
-    "start_date ='2022-01-01'\n",
-    "end_date = '2022-12-31'\n",
+    "#start_date ='2022-01-01'\n",
+    "#end_date = '2022-12-31'\n",
     "aex_exchange_stringcode = \".AS\"\n",
     "\n",
     "# Directory to save the dataframes\n",
@@ -812,6 +812,363 @@
     "# Print failed stocks\n",
     "print(\"Failed to download data for the following stocks:\", failed_stocks)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output directory 'aex_data/' already exists.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for ABN.\n",
+      "Successfully downloaded and saved data for ADYEN.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for AGN.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for AD.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for AKZA.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for MT.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for ASM.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for ASML.\n",
+      "Successfully downloaded and saved data for ASRNL.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "['DSM.AS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "['EXOR.AS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for BESI.\n",
+      "Downloaded data for DSM is empty.\n",
+      "Downloaded data for EXOR is empty.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for HEIA.\n",
+      "Successfully downloaded and saved data for IMCD.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for INGA.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for KPN.\n",
+      "Successfully downloaded and saved data for NN."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for PHIA.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for PRX.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for RAND.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "['RDSA.AS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for REN.\n",
+      "Downloaded data for RDSA is empty.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for UNA.\n",
+      "Successfully downloaded and saved data for UMG.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded and saved data for WKL.\n",
+      "Failed to download data for the following stocks: ['DSM', 'EXOR', 'RDSA']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of AEX stocks\n",
+    "aex_stocks = df[\"Ticker symbol\"].tolist()\n",
+    "#start_date ='2022-01-01'\n",
+    "#end_date = '2022-12-31'\n",
+    "aex_exchange_stringcode = \".AS\"\n",
+    "\n",
+    "# Directory to save the dataframes\n",
+    "output_directory = \"aex_data/\" # Append \".AS\" for Amsterdam exchange\n",
+    "\n",
+    "# Create the output directory if it doesn't exist\n",
+    "try:\n",
+    "    os.makedirs(output_directory)\n",
+    "    print(f\"Output directory '{output_directory}' created successfully.\")\n",
+    "except FileExistsError:\n",
+    "    print(f\"Output directory '{output_directory}' already exists.\")\n",
+    "\n",
+    "os_path = os.path.join(cwd, output_directory)\n",
+    "# Download historical data for each stock\n",
+    "failed_stocks = []\n",
+    "\n",
+    "for stock in aex_stocks:\n",
+    "    try:\n",
+    "        # Fetch historical data for the stock\n",
+    "        stock_data = yf.download(stock + aex_exchange_stringcode, period='max')\n",
+    "        \n",
+    "        # Check if data is not empty\n",
+    "        if not stock_data.empty:\n",
+    "            # Get the maximum available start and end dates\n",
+    "            start_date = stock_data.index.min().strftime('%Y-%m-%d')\n",
+    "            end_date = stock_data.index.max().strftime('%Y-%m-%d')\n",
+    "            \n",
+    "            # Save the dataframe to CSV\n",
+    "            file_path = os.path.join(output_directory, f\"{stock}_data_{start_date}_{end_date}.csv\")\n",
+    "            stock_data.to_csv(file_path)\n",
+    "            \n",
+    "            print(f\"Successfully downloaded and saved data for {stock}.\")\n",
+    "        else:\n",
+    "            print(f\"Downloaded data for {stock} is empty.\")\n",
+    "            failed_stocks.append(stock)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to download data for {stock}: {e}\")\n",
+    "        failed_stocks.append(stock)\n",
+    "\n",
+    "# Print failed stocks\n",
+    "print(\"Failed to download data for the following stocks:\", failed_stocks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
