Updated preprocessing_AEX_ABN_Stock : Added a infinity value check Updated predictiveForecasting : Fixed the residual analysis function

--- a/preprocessing_AEX_ABN_Stock.ipynb
+++ b/preprocessing_AEX_ABN_Stock.ipynb
@@ -179,6 +179,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "DataFrame contains -NO- infinite values\n"
+     ]
+    }
+   ],
+   "source": [
+    "if df_ABN_dropna.isin([np.inf, -np.inf]).any().any():\n",
+    "    print(\"DataFrame contains infinite values\")\n",
+    "else:\n",
+    "    print(\"DataFrame contains -NO- infinite values\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Dataframe has been written to C:\\Users\\hugos\\Desktop\\PersonalProject\\predictiveForecasting\\aex_data/ABN_data_2015-11-20_2024-04-11.csv with overwriting permissions\n"
      ]
     }
