--- a/getRequirements.ipynb
+++ b/getRequirements.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip freeze > requirements.txt"
+    "!pip freeze 2> NUL > requirements.txt"
    ]
   }
  ],
